--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -20,9 +20,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fontsource/geist": "^5.2.6",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
