💾 Guardado local de alumnos y asignaturas funcionando con Electron

--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -1,8 +1,14 @@
 {
   "compilerOptions": {
+    "moduleResolution": "node",
     "baseUrl": ".",
+    "jsx": "react-jsx",
+    "module": "ESNext",
+    "target": "ESNext",
+    "lib": ["DOM", "ESNext"],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@assets/*": ["src/assets/*"]
     }
   }
 }
